src/widgets/snapshots/tvision__widgets__outline__tests__draw_simple_tree.snap
---
source: src/widgets/outline.rs
expression: "render_outline(&mut outline, 20, 5)"
---
size: 20x5
cursor: hidden
text:
|└──Animals          |
|   ├──Cats          |
|   └──Dogs          |
|                    |
|                    |
attr:
|aaaaaaaaaaaaaaaaaaaa|
|bbbbbbbbbbbbbbbbbbbb|
|bbbbbbbbbbbbbbbbbbbb|
|bbbbbbbbbbbbbbbbbbbb|
|bbbbbbbbbbbbbbbbbbbb|
legend:
  . default
  a fg=BIOS(15) bg=BIOS(1)
  b fg=BIOS(7) bg=BIOS(1)
